--- a/index.html
+++ b/index.html
@@ -1,141 +1,156 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="tr">
+  <head>
+    <meta charset="utf-8" />
 
-<head>
-	<meta charset="utf-8">
+    <title>Sprint Challenge - Anasayfa</title>
 
-	<title>Sprint Challenge - Anasayfa</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto|Rubik"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./anasayfa.css" />
+    <script
+      src="https://kit.fontawesome.com/5b12ffad4b.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-	<link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
-	<script src="https://kit.fontawesome.com/5b12ffad4b.js" crossorigin="anonymous"></script>
-</head>
+  <body>
+    <div>
+      <!-- header -->
+      <header class="header">
+        <div class="nav-fixed">
+          <h1 class="header-title">ERGİNEER BAR VE MANGAL</h1>
 
-<body>
-	<div>
-		<!-- header -->
-		<header>
-			<div>
-				ERGİNEER BAR VE MANGAL
+          <nav>
+            <ul class="list">
+              <li><a href="./menu.html">Menü</a></li>
+              <li><a href="">Rezervasyonlar</a></li>
+              <li><a href="">Özel Teklifler</a></li>
+              <li><a href="">İletişim</a></li>
+            </ul>
+          </nav>
+          <div class="logo">
+            <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+            <a href=""><i class="fa-brands fa-square-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+          </div>
+        </div>
+      </header>
 
-				<!-- nav -->
-				Menü
-				Rezervasyonlar
-				Özel Teklifler
-				İletişim
-			</div>
-		</header>
+      <!-- gallery section -->
+      <section class="gallery">
+        <h2 class="gallery-title">YEMEKLERİMİZ</h2>
+        <div class="food">
+          <div class="food-item">
+            <img class="img" src="./img/food-avocadotoast.jpg" alt="" />
+            <img class="img" src="./img/food-burger.jpg" alt="" />
+            <img class="img" src="img/food-poutine.jpg" alt="" />
+            <img class="img" src="img/food-ribs.jpg" alt="" />
+            <img class="img" src="img/food-sandwich.jpg" alt="" />
+            <img class="img" src="img/food-sausage.jpg" alt="" />
+            <img class="img" src="img/food-steak.jpg" alt="" />
+            <img class="img" src="img/food-tacos.jpg" alt="" />
+            <img class="img" src="img/food-wings.jpg" alt="" />
+          </div>
+        </div>
+      </section>
 
-		<!-- gallery section -->
-		<section class="gallery">
-			<div>
-				<h2>YEMEKLERİMİZ</h2>
+      <!-- spacer -->
+      <div class="spacer"></div>
 
-				img/food-avocadotoast.jpg
+      <!-- about section -->
+      <section class="about">
+        <div class="about-container">
+          <h2 class="about-title">HAKKIMIZDA</h2>
 
-				img/food-burger.jpg
+          <div class="text">
+            <h3>Güzel Yemekler, Güzel İnsanlar</h3>
+            <p class="text-item">
+              Quis duis aute, shank ut pork eiusmod in ball tip jerky non. Short
+              ribs tail dolore, fatback in tempor meatloaf pig sunt porchetta
+              beef. Ad hamburger pig veniam, andouille exercitation cillum
+              eiusmod doner irure tail burgdoggen rump chislic officia. Pancetta
+              frankfurter sed, est t-bone porchetta capicola id tri-tip cillum
+              cow leberkas do minim. Sausage ea velit boudin laboris dolore
+            </p>
+          </div>
 
-				img/food-poutine.jpg
+          <div id="bartender" class="pic"></div>
+        </div>
+      </section>
 
-				img/food-ribs.jpg
+      <!-- spacer -->
+      <div class="spacer"></div>
 
-				img/food-sandwich.jpg
+      <!-- contact section -->
+      <section class="contact">
+        <div class="contact-container">
+          <h2 class="content-title">BİZE ULAŞIN</h2>
 
-				img/food-sausage.jpg
+          <div class="info">
+            <div class="address">
+              <h3>Adres</h3>
 
-				img/food-steak.jpg
+              <address>
+                <p>100. sokak</p>
+                <p>Oran, Ankara</p>
+              </address>
+            </div>
 
-				img/food-tacos.jpg
+            <div class="hours">
+              <h3>Saatler</h3>
 
-				img/food-wings.jpg
-			</div>
-		</section>
+              <div>
+                <p>Pazartesiden Cumaya:</p>
+                <p>10:00 - 22:00</p>
+                <p>Friday and Saturday:</p>
+                <p>10:00 - 02:00</p>
+              </div>
+            </div>
 
-		<!-- spacer -->
-		<div class="spacer"></div>
+            <div class="contacts">
+              <h3>İletişim</h3>
 
-		<!-- about section -->
-		<section class="about">
-			<div class="about-container">
-				<h2>HAKKIMIZDA</h2>
+              <div class="contacts-edit">
+                <a id="phone" href="tel:999-999-9999">999-999-9999</a>
+                <a id="email" href="mailto:restoran@boomer.com"
+                  >restoran@ergineer.com</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
-				<div id="cooks" class="pic">
-				</div>
+      <!-- spacer -->
+      <div class="spacer-sm"></div>
 
-				<div class="text">
-					<h3>Güzel Yemekler, Güzel İnsanlar</h3>
-					<p>Quis duis aute, shank ut pork eiusmod in ball tip jerky non. Short ribs tail dolore, fatback in
-						tempor meatloaf pig sunt porchetta beef. Ad hamburger pig veniam, andouille exercitation cillum
-						eiusmod doner irure tail burgdoggen rump chislic officia. Pancetta frankfurter sed, est t-bone
-						porchetta capicola id tri-tip cillum cow leberkas do minim. Sausage ea velit boudin laboris
-						dolore
-						short loin corned beef commodo jowl beef dolor tempor. Dolor culpa enim in meatloaf, ham mollit
-						shankle duis chicken dolore andouille do tenderloin qui.</p>
-				</div>
-
-				<div id="bartender" class="pic">
-				</div>
-			</div>
-		</section>
-
-		<!-- spacer -->
-		<div class="spacer"></div>
-
-		<!-- contact section -->
-		<section class="contact">
-			<div class="contact-container">
-				<h2>BİZE ULAŞIN</h2>
-
-				<div class="info">
-					<div class="address">
-						<h3>Adres</h3>
-
-						<address>
-							<p>100. sokak</p>
-							<p>Oran, Ankara</p>
-						</address>
-					</div>
-
-					<div class="hours">
-						<h3>Saatler</h3>
-
-						<div>
-							<p>Pazartesiden Cumaya:</p>
-							<p>10:00 - 22:00</p>
-							<p>Friday and Saturday:</p>
-							<p>10:00 - 02:00</p>
-						</div>
-					</div>
-
-					<div class="contacts">
-						<h3>İletişim</h3>
-
-						<div>
-							<a id="phone" href="tel:999-999-9999">999-999-9999</a>
-							<a id="email" href="mailto:restoran@boomer.com">restoran@ergineer.com</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<!-- spacer -->
-		<div class="spacer-sm"></div>
-
-		<!-- footer -->
-		<footer>
-			<!-- email signup -->
-			Mail listemize katılın!
-			Üye Ol
-			<!-- nav -->
-			Menü
-			Rezervasyonlar
-			Özel Teklifler
-			İletişim
-			<!-- copyright -->
-			©2022 ERGİNEER Restoran Zinciri, Tüm hakları saklıdır.
-		</footer>
-	</div>
-</body>
-
+      <!-- footer -->
+      <footer class="footer">
+        <div class="footer-contain">
+          <!-- email signup -->
+          <ul class="footer-list">
+            <li class="mail">
+              <h3>Mail listemize katılın</h3>
+              <div class="mail-item"><input type="text" placeholder="E posta Adressi" />
+              <button class="btn">Üye Ol</button></div>
+              
+            </li>
+            <li><a href="">Menü</a></li>
+            <li><a href="">Rezervasyonlar</a></li>
+            <li><a href="">Özel Teklifler</a></li>
+            <li><a href="">İletişim</a></li>
+          </ul>
+          <div></div>
+          <!-- nav -->
+          <div class="copy">
+            <p>©2022 ERGİNEER Restoran Zinciri, Tüm hakları saklıdır.</p>
+          </div>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
